# python-tools.nvim

./: .busted  .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .luarc.json  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  dockerfile  lazy.lua  makefile  python-tools.nvim-0.2-0.rockspec  python-tools.nvim-scm-1.rockspec  repro.lua  stylua.toml  tox.toml
.github/actions/install-luarocks/: action.yaml
.github/actions/install-luarocks-windows/: action.yaml
.github/actions/prepare-env/: action.yaml
.github/workflows/: ci.yml  lint.yml  pr.yml  static-checks.yml  tests.yml  type-check.yml
docs/: developers.md
lua/_meta/: luassert.lua
lua/_meta/python_tools/meta/: _pyproject.lua  pyproject.lua
lua/_meta/test/utils/: asserts.lua
lua/python_tools/: entry_points.lua  init.lua  pickers.lua
lua/python_tools/_async/: _utils.lua  init.lua  uv.lua
lua/python_tools/_scripts/: extract_eps_from_setuppy.py  find_entry_point.py  find_entry_point_importlib.py  find_entry_point_origin.py  find_entry_point_origin_importlib.py  list_entry_points.py  list_entry_points_importlib.py  list_entry_points_setuppy.py  python.lua
lua/python_tools/meta/: entry_points.lua
lua/python_tools/pickers/: _entry_point_actions.lua  _utils.lua  init.lua
lua/python_tools/scripts/: list_entry_points.py
lua/python_tools/utils/: _async.lua  _treesitter.lua  python.lua
scripts/: gen-type-cheking-rcfile.lua  minimal_init.lua
src/: pyproject.c  redirect.c  tomlc17.c  tomlc17.h
test/: asserts.lua  async_spec.lua  entry_points_spec.lua  output_handler.lua  pickers_spec.lua  utils.lua
test/_meta/: asserts.lua
test/busted/: output_handler.lua
test/fixtures/entry_points/: mock_entry_points.json  mock_entry_points_ts_only.json  mock_setup_py_entry_points.json
test/fixtures/mock-repo/: pyproject.toml
test/fixtures/mock-repo/src/: other.py
test/fixtures/mock-setup-py-repo/: hello.py  setup.py
test/fixtures/mock-setup-py-repo/some_other_dir/: placeholder.txt
test/fixtures/picker-actions/: send_all_to_loclist.json
test/fixtures/pyproject/: invalid.toml  no_entrypoints.toml
test/fixtures/rpc_scripts/: find_entry_points.lua  picker_all_results.lua  picker_current_selection.lua  picker_select.lua
test/mock-repo/: hello.py  pyproject.toml
test/utils/: asserts.lua  async_spec.lua  fixt.lua  init.lua  rpc.lua
