[project]
name = "mock-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.uv]
package = true

[project.scripts]
ep1 = "hello:entry_point_1"
ep2 = "hello:entry_point_2"
ep5 = "hello:no_such_function"

[project.entry-points."my.group"]
ep3 = "hello:ep.entry_point"
ep4 = "hello"
